Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121724

Image scaling produces an artifact around translucent areas

    XMLWordPrintable

Details

    Description

      To reproduce, run attached example. There are some lines around the icon if icon.color is set to transparent.

      import QtQuick
      import QtQuick.Controls
      
      ApplicationWindow {
          id: appwindow
          width: 640
          height: 480
          visible: true
          color: "white"
      
          ToolButton {
              icon.source: "img.png"
              icon.color: "transparent"
      
              // works when not scaled:
              // icon.width: 96
              // icon.height: 96
      
              scale: 4
              anchors.centerIn: parent
          }
      }
      

      Attachments

        1. Screenshot 2024-04-12 at 13.02.54 (2).png
          Screenshot 2024-04-12 at 13.02.54 (2).png
          16 kB
        2. qtbug121724-v2.zip
          69 kB
        3. qtbug121724.zip
          68 kB
        4. img.png
          img.png
          0.7 kB
        5. border.png
          border.png
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes